<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tentacles</string>
    <string name="about_octos_title">About OctOS</string>
    <string name="themes_title">Themes</string>
    <string name="themer_settings_title">Themer</string>
    <string name="themes_settings_title">Themes</string>
    <string name="themepacks_settings_title">Theme Packs</string>
    <string name="styles_settings_title">Styles</string>
    <string name="icons_settings_title">Icons</string>
    <string name="fonts_settings_title">Fonts</string>
    <string name="wallpaper_settings_title">Wallpapers</string>
    <string name="lockscreen_wallpaper_settings_title">Lockscreen Wallpapers</string>
    <string name="bootanim_settings_title">Boot Animations</string>
    <string name="soundpack_settings_title">Sound Packs</string>
    <string name="user_interface">Interface</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="empty">Empty</string>
    <string name="delete">Delete</string>
    <string name="ok_string">Ok</string>
    <string name="default_string">Default</string>
    <string name="enabled_string">Enabled</string>
    <string name="disabled_string">Disabled</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dpi">DPI</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="kerneltweaker_settings_title">Kernel Tweaker</string>
    <string name="supersu_title">SuperSU</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_style_summary">Change global menu colors</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="expanded_desktop_disabled">Disabled</string>
    <string name="expanded_desktop_status_bar">Status bar visible</string>
    <string name="expanded_desktop_no_status_bar">Status bar hidden</string>
    <string name="keyguard_title">Lockscreen</string>
    <string name="ls_activedisplay_category">Active Display</string>
    <string name="ls_general_category">General</string>
    <string name="ls_notifications_category">Notifications</string>
    <string name="ls_targets_category">Targets</string>
    <string name="ad_settings_title">Active display</string>
    <string name="ad_settings_summary">Change active display settings</string>
    <string name="ad_enable_title">Enable</string>
    <string name="ad_enable_summary_on">Active display enabled</string>
    <string name="ad_enable_summary_off">Active display disabled</string>
    <string name="ad_text_title">Notification text</string>
    <string name="ad_text_summary">Show the notification text around the ring.</string>
    <string name="ad_all_notifications_title">All notifications</string>
    <string name="ad_all_notifications_summary">Show all notifications including ongoing, non-clearable notifications.</string>
    <string name="ad_hide_low_priority_title">Hide low priority</string>
    <string name="ad_hide_low_priority_summary">Hide low priority notifications such as those from Google Now.</string>
    <string name="ad_pocket_mode_title">Pocket mode</string>
    <string name="ad_pocket_mode_summary">Show active display notifications when you take the device out of your pocket.</string>
    <string name="ad_redisplay_title">Redisplay notifications</string>
    <string name="ad_brightness_title">Notification brightness</string>
    <string name="ad_customizations_title">Customizations</string>
    <string name="ad_excluded_apps_title">Excluded applications</string>
    <string name="ad_excluded_apps_summary">Excluded applications will not show up in active display.</string>
    <string name="ad_show_date_title">Show date</string>
    <string name="ad_show_ampm_title">Show AM/PM</string>
    <string name="ad_sunlight_mode_title">Sunlight mode</string>
    <string name="ad_brightness_summary">Brightness level for displaying notifications when automatic brightness is not enabled.</string>
    <string name="ad_show_date_summary">Show the date above the clock</string>
    <string name="ad_show_ampm_summary">Show AM/PM indicator next to time when using 12hour format</string>
    <string name="ad_sunlight_mode_summary">Invert the colors when in areas with bright light such as direct sunlight.</string>
    <string name="ad_redisplay_never">Never</string>
    <string name="ad_redisplay_1m">1 minute</string>
    <string name="ad_redisplay_5m">5 minutes</string>
    <string name="ad_redisplay_15m">15 minutes</string>
    <string name="ad_redisplay_30m">30 minutes</string>
    <string name="ad_redisplay_1h">1 hour</string>
    <string name="ad_redisplay_2h">2 hours</string>
    <string name="ad_redisplay_5h">5 hours</string>
    <string name="ad_pocket_mode_off">Off</string>
    <string name="ad_pocket_mode_notifications">Notifications only</string>
    <string name="ad_pocket_mode_always">Always</string>
    <string name="app_sidebar_category">App Sidebar</string>
    <string name="app_sidebar_title">Appbar</string>
    <string name="app_sidebar_enable_title">Enable Appbar</string>
    <string name="app_sidebar_enable_summaryOn">\@appbar is enabled</string>
    <string name="app_sidebar_enable_summaryOff">\@appbar is disabled</string>
    <string name="app_sidebar_setup_items_title">Setup Appbar content</string>
    <string name="app_sidebar_setup_items_summary">Add, remove, and position items in the @ppbar</string>
    <string name="app_sidebar_transparency_title">Appbar transparency</string>
    <string name="app_sidebar_transparency_summary">Adjust the Appbar transparency level</string>
    <string name="app_sidebar_position_title">Appbar position</string>
    <string name="app_sidebar_position_summary">Position the Appbar on the left or right side of the screen</string>
    <string name="app_sidebar_position_left">Left</string>
    <string name="app_sidebar_position_right">Right</string>
    <string name="app_sidebar_hide_labels_title">Hide icon labels</string>
    <string name="app_sidebar_hide_labels_summary">Hide Appbar icon labels</string>
    <string name="tab_category">Visible Tab</string>
    <string name="use_tab_title">Display tab</string>
    <string name="use_tab_summary">Display a visible tab on the side which will display the \@appbar when touched.</string>
    <string name="tab_position_title">Tab location</string>
    <string name="tab_position_summary">Display the tab on the top, middle, or bottom on the side of the screen.</string>
    <string name="tab_size_title">Tab size</string>
    <string name="tab_size_summary">Change the size of the visible tab.</string>
    <string name="trigger_category">Trigger region</string>
    <string name="trigger_width_title">Trigger width</string>
    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
    <string name="trigger_top_title">Trigger position</string>
    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
    <string name="trigger_bottom_title">Trigger height</string>
    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
    <string name="led_settings_category_title">Notification LED</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_applist_title">Applications</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_choose_app">Choose application</string>
    <string name="notification_light_add">Add</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="picker_arrow">→</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_test">Test</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="dialog_test_message">Turn the screen off to see the selected notification in action or dismiss this dialog to stop the test</string>
    <string name="dialog_test_button">Dismiss</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="quiet_hours_title">Quiet hours</string>
    <string name="custom_status_bar_color_title">Custom status bar color</string>
    <string name="custom_status_bar_color_summary">This will filter your current system bar to your preferred color</string>
    <string name="status_bar_opaque_color">Opaque color</string>
    <string name="status_bar_opaque_color_summary">Requires restart of system ui</string>
    <string name="status_bar_title">Statusbar</string>
    <string name="show_recent_clear_all_button_title">Clear all button</string>
    <string name="show_recent_clear_all_button_summary">Show clear all button within the recent applications view</string>
    <string name="recent_clear_all_button_location_title">Clear all button position</string>
    <string name="recent_clear_all_button_location_summary">Choose position of the clear all button</string>
    <string name="navbar_cat">Navigation bar</string>
    <string name="show_recents_memory_indicator_title">Memory indicator</string>
    <string name="show_recents_memory_indicator_summary">Show a memory indicator within the recent applications view</string>
    <string name="recents_memory_indicator_location_title">Memory indicator position</string>
    <string name="recents_memory_indicator_location_summary">Choose position of the memory indicator</string>
    <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="progressbar_title">Custom ProgressBar</string>
    <string name="more_device_controls_title">Device tunables</string>
    <string name="more_device_settings_title">Other device options</string>
</resources>