<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Clear all button -->
    <CheckBoxPreference
            android:key="recent_menu_clear_all"
            android:title="@string/show_recent_clear_all_button_title"
            android:summary="@string/show_recent_clear_all_button_summary"
            android:defaultValue="false" />

    <ListPreference
            android:key="recent_menu_clear_all_location"
            android:title="@string/recent_clear_all_button_location_title"
            android:summary="@string/recent_clear_all_button_location_summary"
            android:entries="@array/recent_clear_all_button_location_entries"
            android:entryValues="@array/recent_clear_all_button_location_values"
            android:defaultValue="2"
            android:dependency="recent_menu_clear_all" />
            
    <!-- Memory Indicator -->           
    <CheckBoxPreference
            android:key="show_recents_memory_indicator"
            android:title="@string/show_recents_memory_indicator_title"
            android:summary="@string/show_recents_memory_indicator_summary"
            android:defaultValue="false" />

    <ListPreference
            android:key="recents_memory_indicator_location"
            android:title="@string/recents_memory_indicator_location_title"
            android:summary="@string/recents_memory_indicator_location_summary"
            android:entries="@array/recent_clear_all_button_location_entries"
            android:entryValues="@array/recent_clear_all_button_location_values"
            android:defaultValue="1"
            android:dependency="show_recents_memory_indicator" />

</PreferenceScreen>
