<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

	<header
        android:id="@+id/about_octos"
        android:icon="@drawable/ic_tentacles_about"
        android:title="@string/about_octos_title" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="org.oct.about"
            android:targetClass="org.oct.about.activities.AboutActivity" />
    </header>    
	<header
        android:title="@string/app_name" />
        
	    <header
	        android:key="@+id/themer_settings"
	        android:icon="@drawable/ic_settings_themes"
	        android:title="@string/themes_title"
	        android:fragment="com.oct.tentacles.fragments.ThemerSettings" />
        <header
            android:key="@+id/interface_settings"
            android:icon="@drawable/ic_tentacles_interface"
            android:title="@string/user_interface"
            android:fragment="com.oct.tentacles.fragments.ui.InterfaceSettings" />
        <header
            android:key="@+id/keyguard_settings"
            android:icon="@drawable/ic_tentacles_keyguard"
            android:title="@string/keyguard_title"
            android:fragment="com.oct.tentacles.fragments.ls.KeyguardSettings" />  
        <header
            android:id="@+id/more_device_settings"
            android:icon="@drawable/ic_tentacles_device"
            android:title="@string/more_device_controls_title"
            android:breadCrumbTitle="@string/more_device_settings_title"
            android:fragment="com.android.settings.cyanogenmod.MoreDeviceSettings" />
        <header
            android:id="@+id/navbar_settings"
            android:icon="@drawable/ic_settings_navigation"
            android:title="@string/navbar_cat"
            android:fragment="com.oct.tentacles.fragments.navbar.NavbarTab" />
        <header
            android:id="@+id/statusbar_settings"
            android:title="@string/status_bar_title"
            android:icon="@drawable/ic_tentacles_sb"
            android:fragment="com.oct.tentacles.fragments.sb.SbSettings" />			
    	<header
        	android:id="@+id/supersu_settings"
        	android:icon="@drawable/ic_settings_supersu"
        	android:title="@string/supersu_title">
        	<intent
            	android:action="android.intent.action.MAIN"
            	android:targetPackage="eu.chainfire.supersu"
            	android:targetClass="eu.chainfire.supersu.MainActivity" />
    	</header> 
        <header
            android:id="@+id/power_menu_setings"
            android:title="@string/power_menu_title"
            android:icon="@drawable/ic_tentacles_power"
            android:fragment="com.oct.tentacles.dslv.ButtonsListViewSettings" >
                <extra android:name="buttonMode" android:value="5" />
                <extra android:name="maxAllowedButtons" android:value="8" />
                <extra android:name="disableLongpress" android:value="true" />
                <extra android:name="disableDeleteLastEntry" android:value="true" />
                <extra android:name="actionValues" android:value="shortcut_action_power_menu_values" />
                <extra android:name="actionEntries" android:value="shortcut_action_power_menu_entries" />
                <extra android:name="fragment" android:value="com.oct.tentacles.fragments.PowerMenuFragment" />
        </header>
        <header
            android:fragment="com.android.settings.privacyguard.PrivacyGuardManager"
            android:key="privacy_guard_manager"
            android:icon="@drawable/ic_app_privacy_gaurd"
            android:title="@string/privacy_guard_manager_title" /> 
</preference-headers>
