<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBoxPreference
            android:key="custom_status_bar_color"
            android:title="@string/custom_status_bar_color_title"
            android:summaryOn="@string/custom_status_bar_color_summary"
            android:defaultValue="false" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_opaque_color"
            android:title="@string/status_bar_opaque_color"
            android:summaryOn="@string/status_bar_opaque_color_summary"
            android:dependency="custom_status_bar_color"
            android:defaultValue="0xFF000000" />

        <com.oct.tentacles.preference.SystemSettingCheckBoxPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/status_bar_double_tap_to_sleep_title"
            android:defaultValue="false" />

        <com.oct.tentacles.preference.SystemSettingCheckBoxPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/status_bar_double_tap_to_sleep_title"
        android:defaultValue="false" />

</PreferenceScreen>
